--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 paginate: 10 # pagination based on number of posts
 paginate_path: "page:num"
-exclude: ["Gemfile", "Gemfile.lock"] # files to exclude
+exclude: ["Gemfile", "Gemfile.lock", "CNAME"] # files to exclude
 highlighter: pygments
 markdown: kramdown
 
